@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=7
-PKG_REVISION=16
+PKG_REVISION=18
 PKG_BUILD=1
